# crm.cli

./: .gitignore  README.md  biome.jsonc  install.sh  package.json  smoke.ts
.github/workflows/: release.yml  test.yml
docs/: index.html
skills/: SKILL.md
spec/: architecture.md  data-model.md  fuse-implementation.md  normalization.md
src/: cli.ts  config.ts  db.ts  drizzle-schema.ts  export-fs.ts  filter.ts  format.ts  fuse-daemon.ts  fuse-helper.c  fuse-json.ts  hooks.ts  normalize.ts  reports.ts  resolve.ts  schema.ts
src/commands/: activity.ts  company.ts  contact.ts  deal.ts  dupes.ts  fuse.ts  importexport.ts  report.ts  search.ts  tag.ts
src/lib/: helpers.ts
src/nfs-server/: Cargo.toml
src/nfs-server/src/: daemon_client.rs  fs.rs  handle_map.rs  main.rs
test/: activity.test.ts  company.test.ts  config.test.ts  contact.test.ts  db-busy-timeout.test.ts  deal.test.ts  dupes.test.ts  export-fs.test.ts  fuse.test.ts  global.test.ts  global_test.go  helpers.ts  hook.test.ts  import-export.test.ts  report.test.ts  search.test.ts  search_test.go  tag.test.ts
test/fuse-smoke/: smoke.ts
test/nfs-smoke/: README.md  build.sh  kernel-panic-repro.sh
test/scenarios/: agency-bd.test.ts  ai-agent-fuse.test.ts  messy-input.test.ts
