[package]
name = "crm-nfs"
version = "0.1.0"
edition = "2021"

[dependencies]
nfsserve = { git = "https://github.com/huggingface/nfsserve.git" }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"

[profile.release]
opt-level = 2
strip = true
